# amdgpu-fancontrol

./: .build.yml  .gitlab-ci.yml  Cargo.toml  README.md  config.toml
assets/: amdgpu-fancontrol.service  config.toml
src/: card.rs  config.rs  main.rs
src/card/: endpoint.rs
test/sys/kernel/debug/dri/0/: amdgpu_pm_info
