[package]
name = "amdgpu-fancontrol"
version = "0.2.1"
authors = ["Robert May <rob@afternoonrobot.co.uk>"]
edition = "2018"
license = "MIT"
description = "An AMD GPU fan controller for Linux"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
splines = "4.0.0"

[dev-dependencies]
cargo-deb = "*"

[package.metadata.deb]
assets = [
  ["target/release/amdgpu-fancontrol", "/usr/local/bin/", "755"],
  ["assets/config.toml", "/etc/amdgpu-fancontrol/config.toml", "644"],
  ["assets/amdgpu-fancontrol.service", "/etc/systemd/system/", "644"],
]
